bin/testsuite/tests/compiler/src/errors/compiler1259.swg
#global testerror "Err0336"

struct TOTO
{
	(x, y) = {0, 0}
}